(Format: Year/Month/Day)
Changes for 0.9.12
*05/01/02:
  * Fix for #996298, Windows dont respect toolbar.border.width (Mathias)
    Toolbar.cc
  * Snapping to Screenedges, even when "maxover" is disabled (Mathias)
    Window.cc
*05/01/02:
  * Updated pl_PL (thanx to Meltir <meltir at wp.pl> and Cheester <czester at gmail.com>)
  * Fixed restart/memory problems with Imlib2 (Mathias)
    FbTk/Image.cc FbTk/ImageImlib2.cc
*04/12/30:
  * Fixed "remove last workspace" bug (Henrik)
    Screen.cc
*04/12/28:
  * Fixed minor shape bug (Henrik)
    Window.cc
*04/12/21:
  * Added Imlib2 support to fluxbox (Mathias)
    allows us to load other image-formats than just xpm, but we need
    the help of an external (popular) library for that:

       http://www.enlightenment.org/pages/imlib2.html

     to have imlib2 support, you have to ./configure --enable-imlib2

    FbTk/Image.cc/hh configure.in Makefile.am FbTk/Makefile.am
    xft.m4 -> acinclude.m4 + ac_path_generic.m4

    Added FbTk/ImageImlib2.cc/hh

  * Cleaner code for global Font- and Imagestuff (Mathias)
    fluxbox.cc FbTk/Font.cc/hh FbTk/Image.cc/hh FbTk/App.cc
  * Fixed problems with gtk2-fullscreen-mode (gimp2, galeon etc) (Mathias)
    - synchronize _NET_WM_STATE in Ewmh-Handler
    - disable shape (aka round corners) in fullscreen-mode
    Window.cc/hh Ewmh.cc/hh
  * Added new command, which sets the current window onto head<int> (Mathias)
    SetHead <int>
    Remember.cc/hh FbCommandFactory.cc CurrentWindowCmd.cc/hh
*04/12/18:
  * Fix possible segfault when new text in TextBox is
    smaller than the old one (Mathias)
    FbTk/TextBox.cc
  * Some reordering/renaming of functions/files (Mathias)
    FbTk/Directory.cc/hh -> FbTk/FileUtil.cc/hh
    FbTk/Makefile.am FbTk/Theme.cc MenuCreator.cc fluxbox.cc
    util/fbrun/FbRun.cc
  * Some updates to ru_RU (thanx to <php-coder at ngs dot ru>)
    nls/ru_RU/Translation.m
*04/12/13:
  * Some updates to the man page (Gruber)